--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-user",
-  "version": "0.0.1-alpha.9",
+  "version": "0.0.1-alpha.10",
   "description": "Ressource Oriented Express Middleware to Manage Users.",
   "keywords": [
     "Express",
@@ -37,7 +37,9 @@
     "mongodb": "~1.4.30",
     "express-user-local": "0.0.1-alpha.5",
     "express-brute": "~0.5.2",
-    "express-brute-mongo": "~0.1.0"
+    "express-brute-mongo": "~0.1.0",
+    "csurf": "~1.7.0",
+    "ejs": "~2.2.4"
   },
   "license": "MIT",
   "directories": {
